fixing the Introfuction cut off section

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 .Introduction{
   margin-top: -35px;
-  margin-bottom: -95px;
+  margin-bottom: -30px;
   margin-left: -4px;
 }
 
